--- a/index.html
+++ b/index.html
@@ -179,15 +179,16 @@
     <script>
     document.addEventListener('DOMContentLoaded', () => {
         const tg = window.Telegram.WebApp;
-        const firebaseConfig = {
-            apiKey: "##",
-            authDomain: "##",
-            databaseURL: "##",
-            projectId: "##",
-            storageBucket: "##",
-            messagingSenderId: "##",
-            appId: "##"
-        };
+const firebaseConfig = {
+  apiKey: "AIzaSyDMB0EdRB1NCVa2nsJmzb9gxSIZ5z-zVlI",
+  authDomain: "max-money-2k07.firebaseapp.com",
+  databaseURL: "https://max-money-2k07-default-rtdb.firebaseio.com",
+  projectId: "max-money-2k07",
+  storageBucket: "max-money-2k07.firebasestorage.app",
+  messagingSenderId: "203429901779",
+  appId: "1:203429901779:web:745f5a46e5ea16babceb26",
+  measurementId: "G-3YGPYQEXFY"
+};
         
         let appConfig = {}; let userState = {}; let tgUser = {}; let earningWalletBalance = 0;
         let leaderboardData = { referral: [], earning: [] };
