--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>𝗕𝗼𝗼𝘁𝗘𝗫🥾</title>
+    <title>EARN MONEY </title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -169,11 +169,11 @@ body.dark-theme #user-balance-container{color:var(--text-secondary-dark)}
     radial-gradient(1200px 800px at 110% 110%, #0ea5e9 0%, rgba(14,165,233,0) 60%),
     linear-gradient(160deg,#0b1220 0%, #0f172a 60%, #0b1220 100%);
 }
-#bootex-loader,#fallback-bounce{
+#NoobX-loader,#fallback-bounce{
   display:flex; flex-direction:column; align-items:center; gap:10px;
   transform:translateY(-12px);
 }
-#bootex-loader{
+#NoobX-loader{
   width:min(92%,420px);
   padding:26px 22px;
   border-radius:22px;
@@ -224,13 +224,13 @@ body.dark-theme #user-balance-container{color:var(--text-secondary-dark)}
 
 
 @media (prefers-reduced-motion: reduce){
-  #bootex-loader, .popup-content{ animation:none !important; }
+  #NoobX-loader, .popup-content{ animation:none !important; }
   #loader-line::after{ animation-duration:2.2s; }
 }
 
 
 @media (max-width:360px){
-  #bootex-loader{ padding:22px 18px; }
+  #NoobX-loader{ padding:22px 18px; }
   .loader-title{ font-size:1.16rem; }
   #lottie-box{ width:100px; height:100px; }
 }
@@ -729,14 +729,14 @@ form input:focus, form select:focus, form textarea:focus{
 <body>
 
     <div id="app-loader">
-      <div id="bootex-loader">
+      <div id="NoobX-loader">
         <div id="lottie-box"></div>
-        <div class="loader-title">BootEX <span>🥾</span></div>
-        <p id="loader-text">Preparing BootEX…</p>
+        <div class="loader-title">NoobX <span>🥀🤍</span></div>
+        <p id="loader-text">Preparing NoobX…</p>
       </div>
       <div id="fallback-bounce" aria-hidden="true">
         <div class="boot-icon">🥾</div>
-        <div class="loader-title">BootEX</div>
+        <div class="loader-title">NoobX</div>
         <p class="hint">Getting things ready…</p>
       </div>
     </div>
@@ -875,7 +875,7 @@ form input:focus, form select:focus, form textarea:focus{
     <!-- শিরোনাম + ব্যালেন্স বক্স -->
     <div class="neo-header-box">
       <div>
-        <div class="neo-title">BootEX ড্যাশবোর্ড</div>
+        <div class="neo-title">NoobX ড্যাশবোর্ড</div>
         <div class="neo-sub">আপনার আয়ের সারাংশ ও কার্যকলাপ এক জায়গায়</div>
       </div>
      
@@ -1134,7 +1134,7 @@ document.addEventListener('DOMContentLoaded', () => {
   const loaderTextEl = document.getElementById('loader-text');  
   const updateProgress = (p) => {  
     if (!loaderTextEl) return;  
-    if (p < 30) loaderTextEl.textContent = 'BootEX প্রস্তুতি চলছে…';  
+    if (p < 30) loaderTextEl.textContent = 'NoobX প্রস্তুতি চলছে…';  
     else if (p < 60) loaderTextEl.textContent = 'ডেটা সিঙ্ক হচ্ছে…';  
     else if (p < 90) loaderTextEl.textContent = 'প্রায় শেষ…';  
     else loaderTextEl.textContent = 'রেডি!';  
@@ -1782,7 +1782,7 @@ document.addEventListener('DOMContentLoaded', () => {
   const loaderTextEl = document.getElementById('loader-text');
   const updateProgress = (p) => {
     if (!loaderTextEl) return;
-    if (p < 30) loaderTextEl.textContent = 'BootEX প্রস্তুতি চলছে…';
+    if (p < 30) loaderTextEl.textContent = 'NoobX প্রস্তুতি চলছে…';
     else if (p < 60) loaderTextEl.textContent = 'ডেটা সিঙ্ক হচ্ছে…';
     else if (p < 90) loaderTextEl.textContent = 'প্রায় শেষ…';
     else loaderTextEl.textContent = 'রেডি!';
