--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@ form input:focus, form select:focus, form textarea:focus{
         <p id="loader-text">Preparing NoobX…</p>
       </div>
       <div id="fallback-bounce" aria-hidden="true">
-        <div class="boot-icon">🥾</div>
+        <div class="boot-icon">🖤</div>
         <div class="loader-title">NoobX</div>
         <p class="hint">Getting things ready…</p>
       </div>
